--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         
     </div>
     
+    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
