--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <blockquote>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</blockquote>
             </section>
             <section id="contact">
+                <h2>Drop Us A Line</h2>
                 <ul id="contact-methods">
                     <li>555 555 5555</li>
                     <li>hello@whatever.com</li>
@@ -80,6 +81,12 @@
                     <li class="linked-in"><a href="">Linked In</a></li>
                 </ul>
             </section>
+            <section id="tweets">
+                <h2>Latest Tweet</h2>
+                <div>
+                    <p>For all tweets, check out our twitter</p>
+                </div>
+            </section>
         </div>
         
     </div>
@@ -89,6 +96,7 @@
 </body>
 
 </html>
+
 
 
 
