--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     </div>
     
     <div id="main-content">
+        <div class="slide-button-up">Slide Up</div>
+        <div class="slide-button-down">Slide Down</div>
         
         <div class="wrapper">
             <section id="points-of-sale">
@@ -61,6 +63,8 @@
                 <h2>What Our Clients Say</h2>
                 <img src="images/head.png" alt="quote">
                 <blockquote>quatis alique mos et aut occae cum, veliquaspit quo quam, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</blockquote>
+                <blockquote>veliquaspit quo quam, quatis alique mos et aut occae cum, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l</blockquote>
+                <blockquote>quatis alique mos et aut occae cum, si idem reprorisqui doluptatur accum si sunt ut officiisto enecab id et aut es et l, veliquaspit quo quam</blockquote>
             </section>
             <section id="contact">
                 <h2>Drop Us A Line</h2>
